force-app/main/default/objects/Template_Configuration__mdt/Template_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Template Configuration</label>
    <pluralLabel>Templates Configuration</pluralLabel>
</CustomObject>