force-app/main/default/objects/Template_Configuration__mdt/fields/Download_File_Format__c.field-meta.xml
<CustomField>
    <fullName>Download_File_Format__c</fullName>
    <label>Download File Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pdf</fullName>
                <default>true</default>
                <label>pdf</label>
            </value>
            <value>
                <fullName>docx</fullName>
            </value>
            <value>
                <fullName>pptx</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>