force-app/main/default/objects/Template_Configuration__mdt/fields/File_Format__c.field-meta.xml
<CustomField>
    <fullName>File_Format__c</fullName>
    <description>Describes in which file type you want to store/download the file. Values: all, none, docx, pptx, pdf, docx,pdf, pptx,pdf</description>
    <label>File Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>