force-app/main/default/objects/Template_Configuration__mdt/fields/TemplateName__c.field-meta.xml
<CustomField>
    <fullName>TemplateName__c</fullName>
    <label>TemplateName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>